deploy/ttys-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ttys-svc
  namespace: ttys
  labels:
    app: ttys
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  selector:
   app: ttys
